package com.enjoytrip.attraction.model.dto;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@Data
@NoArgsConstructor
@AllArgsConstructor
public class GugunDto {

    private int gugunCode;
    private String gugunName;
}
