package com.enjoytrip.attraction.model.dto;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@Data
@NoArgsConstructor
@AllArgsConstructor
public class SidoDto {

    private int sidoCode;
    private String sidoName;
}
